@@ -740,7 +740,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         from repoze.lemonade.testing import registerContentFactory
         from karl.content.interfaces import ICalendarCategory
         context = DummyCalendar()
-        renderer = testing.registerDummyRenderer(
+        testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         request = testing.DummyRequest(post={
             'form.submitted': 1,
@@ -751,13 +751,13 @@ class CalendarCategoriesViewTests(unittest.TestCase):
                 self.arg = arg
         registerContentFactory(category_factory, ICalendarCategory)
         response = self._callFUT(context, request)
-
-        self.assertEqual(context['Announcements'].arg, ('Announcements',))
+        name, ann = find_nondefault(context)
+        self.assertEqual(ann.arg, ('Announcements',))
 
         expected = model_url(context, request, 'categories.html',
                              query={'status_message':'Calendar category added'})
         self.assertEqual(response.location, expected)
-        self.assertEqual(context['_default_layer_'].paths, ['/Announcements'])
+        self.assertEqual(context['_default_layer_'].paths, ['/'+name])
         self.assertEqual(context['_default_layer_']._p_changed, True)
 
     # edit an existing category
@@ -979,46 +979,26 @@ class CalendarLayersViewTests(unittest.TestCase):
 
     def test_submit_fails_if_title_is_already_taken_by_a_layer(self):
         context = DummyCalendar()
-
         context['foo'] = DummyCalendarLayer('foo')
+        context['bar'] = DummyCalendarLayer('bar')
 
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         from webob.multidict import MultiDict
         request = testing.DummyRequest(post=MultiDict({
-            'form.submitted': 1,
+            'form.edit': 1,
+            'layer__name__': 'foo',
             'layer_color': 'red',
-            'layer_title': 'foo'
+            'layer_title': 'bar'
             }))
 
         response = self._callFUT(context, request)
 
         self.assertEqual(response.status, '200 OK')
-        self.assertEqual(renderer.fielderrors_target, '__add_layer__')
+        self.assertEqual(renderer.fielderrors_target, 'foo_layer')
 
         self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Name is already used')
-
-    def test_submit_fails_if_title_is_already_taken_by_a_category(self):
-        context = DummyCalendar()
-        context['foo'] = DummyCalendarCategory('foo')
-
-        renderer = testing.registerDummyRenderer(
-            'templates/calendar_setup.pt')
-        from webob.multidict import MultiDict
-        request = testing.DummyRequest(post=MultiDict({
-            'form.submitted': 1,
-            'layer_color': 'red',
-            'layer_title': 'foo'
-            }))
-
-        response = self._callFUT(context, request)
-
-        self.assertEqual(response.status, '200 OK')
-        self.assertEqual(renderer.fielderrors_target, '__add_layer__')
-
-        self.assertEqual(str(renderer.fielderrors['layer_title']),
-                         'Name is already used by a category')
 
     def test_submit_fails_if_title_is_missing(self):
         context = DummyCalendar()
@@ -1075,8 +1055,10 @@ class CalendarLayersViewTests(unittest.TestCase):
                 self.arg = arg
         registerContentFactory(layer_factory, ICalendarLayer)
         response = self._callFUT(context, request)
+        name, ann = find_nondefault(context)
 
-        self.assertEqual(context['Announcements'].arg, ('Announcements', 'blue', ['/path']))
+        self.assertEqual(ann.arg,
+                         ('Announcements', 'blue', ['/path']))
 
         expected = model_url(context, request, 'layers.html',
                              query={'status_message':'Calendar layer added'})
@@ -1148,54 +1130,6 @@ class CalendarLayersViewTests(unittest.TestCase):
         self.assertEqual(renderer.fielderrors_target, 'foo_layer')
         self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Please enter a value')
-
-    def test_submit_fails_if_title_is_already_taken_by_a_layer(self):
-        context = DummyCalendar()
-        context['foo'] = DummyCalendarLayer('foo')
-        context['bar'] = DummyCalendarLayer('bar')
-
-        renderer = testing.registerDummyRenderer(
-            'templates/calendar_setup.pt')
-        from webob.multidict import MultiDict
-        request = testing.DummyRequest(post=MultiDict({
-            'form.edit': 1,
-            'layer__name__': 'foo',
-            'layer_color': 'red',
-            'layer_title': 'bar'
-            }))
-
-        response = self._callFUT(context, request)
-
-        self.assertEqual(response.status, '200 OK')
-        self.assertEqual(renderer.fielderrors_target, 'foo_layer')
-
-        self.assertEqual(str(renderer.fielderrors['layer_title']),
-                         'Name is already used')
-
-    def test_submit_fails_if_title_is_already_taken_by_a_category(self):
-        context = DummyCalendar()
-        context['foo'] = DummyCalendarLayer('foo')
-        context['bar'] = DummyCalendarCategory('bar')
-
-        renderer = testing.registerDummyRenderer(
-            'templates/calendar_setup.pt')
-        from webob.multidict import MultiDict
-        request = testing.DummyRequest(post=MultiDict({
-            'form.edit': 1,
-            'layer__name__': 'foo',
-            'layer_color': 'red',
-            'layer_title': 'bar'
-            }))
-
-        response = self._callFUT(context, request)
-
-        self.assertEqual(response.status, '200 OK')
-        self.assertEqual(renderer.fielderrors_target, 'foo_layer')
-
-        self.assertEqual(str(renderer.fielderrors['layer_title']),
-                         'Name is already used by a category')
-
-
 
 class CalendarSetupViewTests(unittest.TestCase):
     def setUp(self):
@@ -1364,4 +1298,8 @@ class DummySearchAdapter:
 class DummyCatalogEvent(testing.DummyModel):
     pass
 
-        
+def find_nondefault(context):
+    items = context.items()
+    for k, v in items:
+        if not k.startswith('_default'):
+            return k, v
