@@ -1,4 +1,5 @@
 from random import choice
+import string
 
 def friendly_random_id(size=6):
     len = int(size/2)
@@ -6,3 +7,6 @@ def friendly_random_id(size=6):
         [choice('bcdfghklmnprstvw')+choice('aeiou') for i in range(len)]
         )
 
+def unfriendly_random_id(size=10):
+    return ''.join(
+        [choice(string.uppercase+string.digits) for i in range(size)])
